--- a/Test_Web.html
+++ b/Test_Web.html
@@ -6,29 +6,25 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="Test_Web.css">
   </head>
-  <div class="menu">
-     
-  </div>
   <body>
+    <br>
+<div class="nav_bar">
+<ul class="normal">
+    <li class="normal_kid" style="width: 100%;"><a href=""><img src="borgor.png" style="margin-left: 20%;"></a></li>
+    <li class="normal_kid" style="width: 100%;"><a href=""><img src="user.png" style="margin-left: 20%;"></a></li>
+    <li class="normal_kid"style="width: 100%;"><a href=""><img src="online-course.png" style="margin-left: 20%;"></a></li>
+    <li class="normal_kid" style="width: 100%;"><a href=""><img src="mail.png" style="margin-left: 20%;"></a></li>
+    <li class="normal_kid" style="width: 100%;"><a href=""><img src="chat.png" style="margin-left: 20%;"></a></li>
 
-    <br>
-    <div class="content_1">
-        <div class="box"> <img id="image_0" src=""></div>
-        <div class="box"><img id="image_1" src=""></div>
-        <div class="box"><img id="image_2" src=""></div>
-    </div>
-    <br>
-    <div class="content_1">
-      <div class="box"><img id="image_3" src=""></div>
-      <div class="box"><img id="image_4" src=""></div>
-      <div class="box"><img id="image_5" src=""></div>
-  </div>
-  <br>
-    <div class="content_1">
-      <div class="box"><img id="image_6" src=""></div>
-      <div class="box"><img id="image_7" src=""></div>
-      <div class="box"><img id="image_8" src=""></div>
-  </div>
+</ul>
+</div>
+<div class="single_box">
+    <iframe width="50%"  style="border-radius: 10px 0px 0px 10px;" src="https://www.youtube.com/embed/dZbU19tD0qA?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <p class="single_box_content" style="color:aliceblue;">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+</div>
+
+<div class="grid" id="here">
+</div>
 
   
   </body>
